--- a/template/member/member_info.html
+++ b/template/member/member_info.html
@@ -61,6 +61,7 @@
 						<a href="/admin/article_visitors" class="btn btn-sm btn-success">文章访问记录</a>
 						<a href="/admin/site_visitors" class="btn btn-sm btn-success">站点访问记录</a>
 						<a href="/admin/resume_download" class="btn btn-sm btn-success">下载简历</a>
+						<a href="/admin/pack_sitedata" class="btn btn-sm btn-success">打包网站数据</a>
 					</div>
 				</div>
 			</div>
