--- a/template/component/navbar_v2.html
+++ b/template/component/navbar_v2.html
@@ -33,9 +33,9 @@
 				<li {{if eq .active "about"}}class="active"{{end}}>
 					<a href="/about">关于我</a>
 				</li>
-				<li {{if eq .active "donate"}}class="donate"{{end}}>
+				<!--li {{if eq .active "donate"}}class="donate"{{end}}>
 					<a href="/donate">捐助</a>
-				</li>
+				</li-->
 				{{if ne .config.NewBlog ""}}
 				<li>
 					<a href="{{.config.NewBlog}}">新博客</a>
